feat : Add invite reject connection code with commands in client